--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bigdecimal": "^0.6.1",
     "bootstrap-vue": "^2.0.0-rc.11",
     "jquery": "^3.3.1",
     "vue": "^2.5.2",
