--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
     "bigdecimal": "^0.6.1",
     "bootstrap": "^4.1.3",
-    "bootstrap-vue": "^2.0.0-rc.11",
+    "es6-promise": "^4.2.4",
+    "es6-promise-polyfill": "^1.2.0",
     "jquery": "^3.3.1",
+    "popper.js": "^1.14.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "web3": "^1.0.0-beta.35"
