--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "contract-app",
+  "name": "Contracts-by-Smallet",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -13,6 +13,7 @@
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
+    "qrious": "^4.0.2",
     "save": "^2.3.2",
     "vue": "^2.5.2",
     "vue-i18n": "^8.0.0",
